--- a/RVFS/account/templates/contact.html
+++ b/RVFS/account/templates/contact.html
@@ -14,7 +14,15 @@
             <button class="btn btn-secondary text-standard" type="submit">Submit</button>
         </div>
         <div class="col">
-            info goes here
+            <iframe
+              width="400"
+              height="300"
+              frameborder="0" style="border:0"
+              src="https://www.google.com/maps/embed/v1/place?key={{ api }}
+                &q=11639+13th+Ave+SW,Burien+WA">
+            </iframe>
+            <h4 class="text-standard">Shop Hours:</h4>
+            <p class="text-standard">Tues.-Sat. 10AM-8PM</p>
         </div>
     </div>
 </form>
