More testing and minor bug fixes, checkout for none users fixed.

--- a/RVFS/account/templates/account.html
+++ b/RVFS/account/templates/account.html
@@ -3,9 +3,7 @@
 {% load thumbnail %}
 {% load mathfilters %}
 
-{% block title %}
-Account
-{% endblock %}
+{% block title %}Account{% endblock %}
 
 {% block body %}
 <div class="dropdown">
