--- a/RVFS/account/templates/del_add.html
+++ b/RVFS/account/templates/del_add.html
@@ -1,6 +1,6 @@
 {% extends 'rvfsite/base.html' %}
 
-{% block title %}Info Form{% endblock %}
+{% block title %}Delete Address{% endblock %}
 
 {% block body %}
   <form enctype="multipart/form-data" method="post">
