Touch ups on bugs and permissions for views, still need more testing.

--- a/RVFS/RVFS/templates/rvfsite/about.html
+++ b/RVFS/RVFS/templates/rvfsite/about.html
@@ -10,15 +10,18 @@ About
 <h1 class="section-heads">About the Shop:</h1>
 <p class="text-standard about-text">
 Our Burien workshop is crewed by a team of designers and artisans who will help you bring your creations to life. We offer a variety of metalworking services out of our forge and fabrication shops, including made-to-order custom fabrication, maintenance and repair of metalwork items, removal of scrap metal and materials in addition to a catalog of pre-made metal tools and artwork. Our capabilities as a shop are constantly advancing as we add new tools to our shops and new skills to our repertoire to refine our craft and our wares.
-</p>
-<p class="text-standard about-text">
+<br />
+<br />
+Here at RVFM we pride ourselves with the fact that most of what leaves our shop has been made of recycled materials. Old railroad ties, filing cabinets, washers and/or dryers, old tire rims; all of this and much more has come into the shop in one form and left in another. Be sure to let us know through the proper channels if you have anything you’re willing to donate and we will get back to you! This can be found through our Services Page.
+<br />
+<br />
 Our crew consists of Muninn and Huginn Ravenmoore, the owner and manager of RVFM respectively, along with Gordon Blaylock out in the shop. When you arrive, you will likely meet with Huginn if Muninn is out in the shop with Gordon to place your order or consult on your design. From there, Muninn and Gordon will work to fabricate your design and have it ready for you to pick up from the shop. You might even meet Isis the shop dog, too!
 </p>
 <p class="text-standard about-text">
 Take a look in the shop Gallery for a glimpse at where the magic happens!
 </p>
 
-<a class="next-link" href="#"><h2>Visit the Forge!</h2></a>
+<a class="next-link" href="/gallery/shop_gallery/"><h2>Visit the Forge!</h2></a>
 <img class="dividor" src="{% static 'arrow-divider.png' %}">
 <h1 class="section-heads">Meet The Crew:</h1>
 
