--- a/RVFS/account/templates/contact.html
+++ b/RVFS/account/templates/contact.html
@@ -14,6 +14,7 @@
             <button class="btn btn-secondary text-standard" type="submit">Submit</button>
         </div>
         <div class="col">
+            <p class="text-standard">If you have any questions, concerns, or complaints you can send them to us to be addressed here! We will get back to you at the next available chance during office hours. We love to hear back from our clients and hope to hear from you again if current commissions have been finished.</p>
             <iframe
               width="400"
               height="300"
