Major updates to paypal for security and bug fixes.

--- a/RVFS/catalog/templates/cart.html
+++ b/RVFS/catalog/templates/cart.html
@@ -295,7 +295,7 @@
         {% endif %}
     </div>
     <div class="w-100 d-flex">
-        <input class="btn btn-secondary text-standard ml-auto" type="submit" name="check" value="Continue to Checkout">
+        <input class="btn btn-secondary text-standard ml-auto" type="submit" name="check" value="Continue Checkout with PayPal">
     </div>
     </div>
     {% endif %}
